Remove spurious punctuation.

--- a/content/06-development-guidelines/00-installing-the-cardano-node.mdx
+++ b/content/06-development-guidelines/00-installing-the-cardano-node.mdx
@@ -31,7 +31,7 @@ The IOG Academy provides the course below. You can view the course at your own p
 | [Stake pool operations. Useful commands 1/2](https://www.youtube.com/watch?v=NCdsk75-7NA&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=19&pp=iAQB) | Video 19. Stake pool operations; useful commands for managing your stake pool; video one of two. |  
 | [Stake pool operations. Useful commands 2/2](https://www.youtube.com/watch?v=NCdsk75-7NA&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=20&pp=iAQB) | Video 20. Stake pool operations; useful commands two of two. |  
 | [Monitoring with Prometheus](https://www.youtube.com/watch?v=iqAmwhk7djE&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=21&pp=iAQB) | Video 22. Stake pool operations; how to install and configure Prometheus to monitor your Cardano node. |  
-| [Cardano governance](https://www.youtube.com/watch?v=biUHK1UDkAY&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=22&pp=iAQB) | Video 23. Carlos discusses the history and mechanism of implementing Cardano updates. !
+| [Cardano governance](https://www.youtube.com/watch?v=biUHK1UDkAY&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=22&pp=iAQB) | Video 23. Carlos discusses the history and mechanism of implementing Cardano updates. 
 | [Creating a local cluster](https://www.youtube.com/watch?v=2oAonlDUcNY&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=23&pp=iAQB) | Video 24. Creating a local cluster; using the `create-cardano` command. |  
 | [Local cluster from Byron to Shelley](https://www.youtube.com/watch?v=8Sp2ljOrXXw&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=24&pp=iAQB) | Video 25. Creating a local cluster; moving from genesis to Byron to Shelley. |  
 | [Creating a stake pool on the local cluster](https://www.youtube.com/watch?v=0svni-Dy4zM&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=25&pp=iAQB) | Video 26. Creating a local cluster; providing funds, keys, and configuration files for a new stake pool. |  
