--- a/content/13-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/13-pioneer-programs/01-plutus-pioneers.mdx
@@ -5,13 +5,13 @@ metaTitle: Plutus Pioneer program
 
 >Before you start, note that Plutus Core, Cardano’s native smart contract language, is written in Haskell. Plutus contracts are effectively Haskell programs and that is why it is essential to know the basics of Haskell before enrolling in the Plutus Pioneer program. 
 
->Join a new Haskell Bootcamp course. With unique code examples and interesting homework that has prepared solutions you can learn the fundamentals of Haskell and be prepared. 
+>In preparation, we recommend that you complete our new self-paced [Haskell Bootcamp](https://iohk.instructure.com/courses/141) course. This stepping stone course offers unique code examples and interesting exercises that have prepared solutions to help you can learn the fundamentals of Haskell. 
 
 >[Yes, I am interested!](https://iohk.instructure.com/courses/141)
 
 ## What is the Plutus Pioneer program?
 
-It is a program to recruit and train developers in Plutus for the Cardano ecosystem. When you join this program, you will become part of a group with access to a set of courses that teach you the core principles of how to code in both Haskell and Plutus. It will be highly interactive, with weekly videos, exercises, and Q&A sessions, along with exclusive access to the creators and key experts in the language. You will also be able to join a dedicated community channel, created to help pioneers connect to each other as you learn.
+It is a program to recruit and train developers in Plutus for the Cardano ecosystem. When you join this program, you will become part of a group with access to a set of lectures that teach you the core principles of how to code in both Haskell and Plutus. It is highly interactive, with weekly videos, exercises, and Q&A sessions, along with exclusive access to the creators and key experts in the language. You will also be able to join a dedicated community channel, created to help pioneers connect with each other as you learn.
 
 ## What prior experience do I need?
 
@@ -34,7 +34,7 @@ As with all learning experiences, the more you put in the more you will get out!
 
 ## When can I join?
 
-We are launching our fourth cohort on February 20th, so please register your interest today using the form below to find out more details. 
+We have recently completed a very successful fourth cohort of this program and will be launching another course later this year. Please register your interest today using the form below to find out more details. 
 
 ## How can I register for the Plutus Pioneer program?
 
