style guide tweaks

--- a/content/14-tools/03-comp-matrix.mdx
+++ b/content/14-tools/03-comp-matrix.mdx
@@ -3,7 +3,7 @@ title: Compatibility matrix
 metaTitle: Compatibility matrix
 ---
 
-## Component Compatibility with Cardano Node
+## Component compatibility with the Cardano node
 
 This Cardano components compatibility matrix shows the runtime Cardano component dependencies on a particular version of [cardano-node](https://github.com/input-output-hk/cardano-node/releases). (It does not reflect any stacks.) The compatibility matrix should be read in conjunction with the Cardano component dependencies definition.
 
