--- a/content/06-development-guidelines/06-references.mdx
+++ b/content/06-development-guidelines/06-references.mdx
@@ -1,6 +1,6 @@
 ---
-title: References
-metaTitle: References
+title: Tutorials
+metaTitle: Tutorials
 ---
 
 Here you will find links to tutorials and examples of creating scripts and transactions on Cardano. You will also find script examples specific to the Babbage era (Vasil functionality).
