--- a/content/06-development-guidelines/06-references.mdx
+++ b/content/06-development-guidelines/06-references.mdx
@@ -13,6 +13,7 @@ For more details, see:
 -   [Scripts](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/simple-scripts.md)
 -   [Multi-asset support](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/native-tokens/01-multi-assets.md)
 -   [Cardano governance update proposals](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/cardano-governance.md)
+-   [Creating Cardano testnets](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/create-cardano.md)
     
 **Plutus scripts**
 
