--- a/content/12-marlowe/01-learn-about-marlowe.mdx
+++ b/content/12-marlowe/01-learn-about-marlowe.mdx
@@ -24,11 +24,12 @@ The deployment of Marlowe onto the mainnet includes the following features:
 
 ## Get started with Marlowe
 
-To get started with Marlowe, find the various resources on the [updated documentation website](link):
+To get started with Marlowe, find the various resources on the updated [documentation website](https://docs.marlowe.iohk.io/docs/introduction):
 
-- Tutorials
-- Guides
-- Playbooks
-- Videos
-- Examples
-- Developer tools.
+-   [Tutorials](https://docs.marlowe.iohk.io/tutorials)
+-   [Concepts](https://docs.marlowe.iohk.io/tutorials/concepts/overview)
+-   [Guides](https://docs.marlowe.iohk.io/tutorials/guides/overview)
+-   [Playbooks](https://docs.marlowe.iohk.io/tutorials/playbooks/overview)
+-   [Videos](https://docs.marlowe.iohk.io/tutorials/videos)
+-   [Contract gallery](https://docs.marlowe.iohk.io/docs/examples/examples-contract-gallery)
+-   [Developer tools](https://docs.marlowe.iohk.io/docs/developer-tools/overview).
