fix: add repo link in faq

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/09-discussion-faq.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/09-discussion-faq.mdx
@@ -11,7 +11,7 @@ These questions relate to the components IOG provides for building custom sidech
 
 ### Is the Sidechain Toolkit an open-source project?
 
-Yes, it will be open-sourced under the Input Output Global GitHub repository.
+Yes, the technical specification and proof of concept EVM sidechain client are open-sourced under IOG Github in this [repository](https://github.com/input-output-hk/sc-evm).
 
 ### Will there be an alternative chain follower to DB Sync that consumes less resources?
 
