Revert "update sc-api pg 2 use local node"

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/07-api.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/07-api.mdx
@@ -7,12 +7,7 @@ Interacting with the sidechain requires sending requests to specific JSON-RPC AP
 
 ## Specification
 
-The EVM sidechain testnet supports [OpenRPC](https://open-rpc.org/)'s `rpc.discover` service discovery method that will return the OpenRPC scheme for the JSON-RPC API. You can easily validate and preview the schema on the [OpenRPC Playground](https://playground.open-rpc.org/) by passing your sidechain node's JSON-RPC URL:
-
-```
-https://playground.open-rpc.org/?schemaUrl=http://localhost:8546
-```
-
+The EVM sidechain testnet supports [OpenRPC](https://open-rpc.org/)'s `rpc.discover` service discovery method that will return the OpenRPC scheme for the JSON-RPC API. You can easily validate and preview the schema on the [OpenRPC Playground](https://playground.open-rpc.org/?schemaUrl=https://faucet.sidechain.evmtestnet.iohkdev.io/).
 
 *If your product requires a method that is not currently implemented, please contact Input Output Global support.*
 
