fix: wip sc docs refactoring

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -3,33 +3,13 @@ title: Network details
 metaTitle: Network details
 ---
 
-The proof of concept EVM sidechain testnet environment consists of two networks:
+The proof of concept EVM sidechain environment consists of two networks:
 
-1. EVM sidechain testnet (sidechain, SC)
-2. A *dedicated* Cardano testnet (main chain, MN)
+*Note: Chain IDs are set by network operators.*
 
 ## Networks
 
 | Name | Network Type | Chain ID  | Consensus | Token | Model
 | --- | :---: | :---: | :---: | :---: | :---: |
-| EVM sidechain testnet | Testnet | 78 | OBFT | Sidechain token (`SC_Token`) | Account model |
-| Cardano testnet | Testnet | 7 | POS | Test ada | EUTXO |
-
-## Network utilities
-
-### EVM Sidechain
-
-|  |  | 
-| --- | :---: |
-| RPC | `https://faucet.sidechain.evmtestnet.iohkdev.io/` (same url as faucet) |
-| Block Explorer | https://explorer.sidechain.evmtestnet.iohkdev.io/   |
-| Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/   |
-
-### Dedicated Cardano Testnet
-
-|  |  | 
-| --- | :---: |
-| Faucet | https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
-## Network notifications
-
-Announcements for new releases, network disruptions, and other updates will be announced in the `#ask-sidechains` channel in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
+| EVM_Sidechain Testnet | Testnet | * | OBFT | Sidechain token (`SC_Token`) | Account model |
+| Cardano Testnet | Testnet | * | POS | Test ada | EUTXO |
