--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -15,7 +15,7 @@ This tutorial will show you how to deploy a Solidity smart contract to the EVM s
 
 ## Prerequisites
 
-In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../metamask) and fund your wallet with testnet tokens using the [faucet](https://faucet.sidechain.evmtestnet.iohkdev.io/).
+In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../metamask) and fund your wallet with testnet tokens using the [SC_EVM Faucet](https://github.com/input-output-hk/sc-evm-faucet-web).
 
 ## Step 1 - Configure Remix
 
@@ -209,13 +209,14 @@ require("@nomicfoundation/hardhat-toolbox");
 
 /** @type import('hardhat/config').HardhatUserConfig */
 
-const Private_Key = "INSERT_PRIV_KEY"
+const PRIVATE_KEY = "INSERT_PRIV_KEY"
+const SC_RPC_URL = "INSERT_SIDECHAIN_RPC_URL"
 
 module.exports = {
   networks: {
     evm-sidechain: {
-        url: `https://faucet.sidechain.evmtestnet.iohkdev.io/`,
-        accounts: [`0x${Private_Key}`]
+        url: `${SC_RPC_URL}`,
+        accounts: [`0x${PRIVATE_KEY}`]
     },
   },
   solidity: "0.8.17",
@@ -239,7 +240,12 @@ $ npx hardhat run scripts/deploy.js --network evm-sidechain
 Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 ```
 
-🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can search your deployment on the [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
+🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can verify deployment by querying the transaction:
+
+```
+curl -H "Content-Type: application/json" -X POST --data \
+'{"jsonrpc":"2.0","method":"eth_getRawTransactionByHash","params":["<TX_HASH>"],"id":1}' http://localhost:8546
+```
 
 # Truffle
 
@@ -291,4 +297,4 @@ At this point, you've defined the EVM sidechain testnet and your testnet account
 $ truffle migrate --network evm-sidechain
 ```
 
-Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
+Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be queryed on the EVM sidechain.
