--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -3,13 +3,23 @@ title: Network details
 metaTitle: Network details
 ---
 
-The proof of concept EVM sidechain environment consists of two networks:
+The proof of concept EVM sidechain testnet environment consists of two networks:
 
-*Note: Chain IDs are set by network operators.*
+1. EVM sidechain
+2. A Cardano testnet (main chain)
 
 ## Networks
 
 | Name | Network Type | Chain ID  | Consensus | Token | Model
 | --- | :---: | :---: | :---: | :---: | :---: |
-| EVM_Sidechain Testnet | Testnet | * | OBFT | Sidechain token (`SC_Token`) | Account model |
-| Cardano Testnet | Testnet | * | POS | Test ada | EUTXO |
+| EVM sidechain testnet | Testnet | * | OBFT | Sidechain token (`SC_Token`) | Account model |
+| Cardano testnet | Testnet | * | POS | Test ada | EUTXO |
+
+## Network utilities
+
+|  |  | 
+| --- | :---: |
+| Block Explorer | https://github.com/input-output-hk/blockscout   |
+| Faucet | https://github.com/input-output-hk/sc-evm-faucet-web   |
+
+Announcements for new releases, network disruptions, and other updates will be announced in the `#ask-sidechains` channel in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
