--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -36,7 +36,7 @@ cardano-cli address build \
 
 These steps are based on this [keys and adresses creation tutorial](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md).
 
-Request test ada using the web-app: https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
+Request test ada using a public Cardano testnet faucet: https://docs.cardano.org/cardano-testnet/tools/faucet/
 
 # How to fund your sidechain account with test SC_token
 
@@ -44,4 +44,4 @@ Create a sidechain account using a compatible Web3 wallet connected to the EVM s
 
 - [Working with MetaMask](/cardano-sidechains/example-evm-sidechain/metamask).
 
-Request test `SC_Token` using the web-app: https://faucet.sidechain.evmtestnet.iohkdev.io/
+Request test `SC_Token` using the web-app: https://github.com/input-output-hk/sc-evm-faucet-web
