--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -78,7 +78,7 @@ When the contract is compiled, you can view contract ABI, Bytecode, and more inf
 
 To verify that the smart contract was deployed on the sidechain testnet you can:
 
-- Search the transaction hash or contract address on the EVM sidechain [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
+- Search the transaction hash or contract address on the EVM sidechain [testnet explorer](https://github.com/input-output-hk/blockscout).
 - Open MetaMask and see if the contract deployment transaction was successfully signed.
 - Check Remix logs for deployment details.
   
@@ -147,12 +147,6 @@ $ npx hardhat
   Create an empty hardhat.config.js
   Quit
 ```
-
-<!-- Hardhat will ask you to install `hardhat-waffle` and `hardhat-ethers` which is required for tests built with Waffle. In case you've missed it, install them by executing the following:
-
-```
-npm install --save-dev @nomiclabs/hardhat-waffle ethereum-waffle chai @nomiclabs/hardhat-ethers ethers
-``` -->
 
 ## Running tasks
 
