--- a/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
@@ -5,7 +5,7 @@ metaTitle: SC_Token and Test ADA
 
 ## What is SC_Token?
 
-**SC_Token<sup>1</sup>** is the native token of the Cardano EVM sidechain Testnet. `SC_Token` can be moved between the main chain (Cardano) and the EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token` carries no real-world value.
+**SC_Token<sup>1</sup>** is the native token of the proof of concept EVM sidechain testnet. `SC_Token` can be moved between the main chain (Cardano) and the EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token` carries no real-world value.
 
 ### What is gas?
 
@@ -13,14 +13,14 @@ metaTitle: SC_Token and Test ADA
 
 ### How to get SC_Token?
 
-IO Global maintains a faucet at https://faucet.sidechain.evmtestnet.iohkdev.io/ for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You can claim one test SC_Token every 24 hours. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
+IO Global as an open-sourced faucet at https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
 
 ## What is Test Ada?
 
-Test Ada (`tAda`) is the native token of the *dedicated* Cardano testnet (separate from the preview and pre-production testing environments). `tAda` is required to pay for transaction fees conducted on the Cardano testnet. `tADa` carries no real world value.
+Test Ada (`tAda`) is the native token of Cardano testnets. `tAda` is required to pay for transaction fees conducted on a Cardano testnet. `tAda` carries no real world value.
 
 ### How to get tAda? 
 
-IO Global maintains a faucet at https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet for testing purposes.
+Request test ada using a public Cardano testnet faucet: https://docs.cardano.org/cardano-testnet/tools/faucet/
   
-<sup>1</sup> Temporary name  
+<sup>1</sup> Temporary name
