--- a/content/08-cardano-sidechains/03-example-evm-sidechain/09-how-to-install.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/09-how-to-install.mdx
@@ -1,1 +1,33 @@
-# How to install
+# Run a POC EVM Sidechain Network
+
+![img](https://i.imgur.com/z5RME4c.png)
+
+## Step 01 - Run Cardano testnet
+
+Before setting up and running a sidechain (EVM sidechain), it is essential to establish and configure a mainchain (Cardano testnet). A mainchain serves as the foundation for the sidechain, providing the necessary infrastructure and security. You can create your own testnet or utilize a public testnet for the deployment of your sidechain.
+
+
+- [Getting started with Cardano testnets](https://docs.cardano.org/cardano-testnet/getting-started/)
+- [Getting started with stake pool operation](https://developers.cardano.org/docs/operate-a-stake-pool/)
+- [Getting started with Ogmios](https://developers.cardano.org/docs/get-started/ogmios/)
+- [Getting started with Kupo](https://cardanosolutions.github.io/kupo/)
+- [Getting started with CTL](https://github.com/Plutonomicon/cardano-transaction-lib)
+
+## Step 02 - Deploy mainchain scripts to mainnet
+
+For a sidechain to function efficiently, a set of scripts needs to be deployed on the mainchain. These scripts play a crucial role in managing the policies and validators of the sidechain, ensuring its secure and smooth operation.
+
+- [Getting started with trustless-sidechain-ctl](https://github.com/input-output-hk/trustless-sidechain/tree/open-source/ctl)
+- [Read the specification of the plutus scripts](https://github.com/input-output-hk/trustless-sidechain/blob/master/docs/Specification.md)
+
+## Step 03 - Run DB-Sync
+
+DB-sync is a crucial component when it comes to enabling an EVM sidechain to listen to events on the Cardano mainnet. By integrating DB-sync into your sidechain infrastructure, you can establish a reliable connection that allows your sidechain to stay synchronized with the Cardano mainnet.
+
+- [How to run a Cardano DB-sync node](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md)
+
+## Step 04 - Run EVM Sidechain validator node
+
+Sidechain validator nodes are responsible for validating transactions, proposing and validating blocks, and maintaining the consensus mechanism within a sidechain network. These nodes ensure the integrity and security of the sidechain by participating in the block production process. However, before they can contribute, they must register with the sidechain committee.
+
+- [Getting started with evm-sidechain client](https://github.com/input-output-hk/sc_evm)
