Add info about faucet's required pool id format - bech32

--- a/content/05-cardano-testnet/06-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/06-tools/01-faucet.mdx
@@ -15,7 +15,9 @@ ada on the mainnet.
 
 **To request tokens using the faucet:**
 
-1. Enter the address of the account where you want to top up funds.
+1. Select the desired action type:
+   - Enter the address of the account where you want to top up funds.
+   - Enter the pool ID in bech32 format (`pool18ttg8k...a1c`) where you want to delegete funds
 2. If you have been issued with an API key, please enter this to access any
    additional funds you may have been allocated.
 3. Click **Receive test ada**.
