Change DB-Sync to DB Sync

--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
@@ -20,11 +20,11 @@ For a sidechain to function efficiently, a set of scripts needs to be deployed o
 - [Getting started with trustless-sidechain-ctl](https://github.com/input-output-hk/trustless-sidechain/tree/open-source/ctl)
 - [Read the specification of the plutus scripts](https://github.com/input-output-hk/trustless-sidechain/blob/master/docs/Specification.md)
 
-## Step 03 - Run DB-Sync
+## Step 03 - Run DB Sync
 
-DB-sync is a crucial component when it comes to enabling an EVM sidechain to listen to events on the Cardano mainnet. By integrating DB-sync into your sidechain infrastructure, you can establish a reliable connection that allows your sidechain to stay synchronized with the Cardano mainnet.
+DB Sync is a crucial component when it comes to enabling an EVM sidechain to listen to events on the Cardano mainnet. By integrating DB Sync into your sidechain infrastructure, you can establish a reliable connection that allows your sidechain to stay synchronized with the Cardano mainnet.
 
-- [How to run a Cardano DB-sync node](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md)
+- [How to run a Cardano DB Sync node](https://github.com/input-output-hk/cardano-DB Sync/blob/master/doc/building-running.md)
 
 ## Step 04 - Run EVM Sidechain validator node
 
