correct broken link

--- a/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -46,7 +46,7 @@ Access tools and resources through the links below.
 [AdaEx](https://adaex.org/)  
 [Adapools](https://adapools.org/)  
 [AdaStat](https://adastat.net/transactions)  
-[Adatools](https://adatools.io/transactions)  
+[Adatools](https://adatools.io/)  
 [Cardanoscan](https://cardanoscan.io/transactions)  
 [Cexplorer](https://cexplorer.io/)   
 [Cardano Assets](https://cardanoassets.com/)   
