Implement editorial feedback

--- a/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -4,7 +4,7 @@ metaTitle: Stake pool operations 101
 ---
 Welcome to your one-stop shop for all things related to stake pool operations! 
 
-This page helps you navigate through the technical information, resources, and updates you need to manage your pool/s operations efficiently, whether you're an experienced operator or just starting out.
+This page helps you navigate through the technical information, resources, and updates needed to manage your pool/s operations efficiently, whether you're an experienced operator or just starting out.
 
 Last updated on: June 24, 2023
 
@@ -16,7 +16,7 @@ Access the [cardano-node](https://github.com/input-output-hk/cardano-node#overvi
 ## Latest node details
 This release is mainnet ready and has significant improvements at epoch boundary. All SPOs are strongly encouraged to update.  
 
-Node 8.1.1 is a minor release of the Cardano node. This contains a fix from ouroboros-network for P2P topologies that don't contain DNS names in local roots.
+Node 8.1.1 is a minor release of the Cardano node. It implements a fix from ouroboros-network for P2P topologies that don't contain DNS names in local roots.
 ## Overview of Cardano environments
 ### Preview
 Preview is the longer-term network environment for testing release candidates and expanded test scenarios. Preview is meant for DApps, SPOs, and exchanges wishing to test mature release candidates.  
@@ -62,7 +62,7 @@ Access tools and resources through the links below.
 [Support and feedback](https://docs.cardano.org/cardano-testnet/support-feedback/)   
 
 ## SPO alliances
-[Guild Operators](https://cardano-community.github.io/guild-operators/): a group of well-known and experienced community members that provides information about various guild tools that simplify various stake ops (setting up, managing, and monitoring pools) for Cardano SPOs.  
+[Guild Operators](https://cardano-community.github.io/guild-operators/): a group of well-known and experienced community members that provides information about guild tools that simplify various stake ops (setting up, managing, and monitoring pools) for Cardano SPOs.  
 [Cardano Single Pool Alliance (SPA)](https://singlepoolalliance.net/): a group of separate SPOs who have vowed to run a single stake pool for the sole purpose of providing the Cardano ecosystem with true decentralization.  
 [xSPO Alliance](https://www.xspo-alliance.org/): a group of small SPOs that joined with a total live stake of less than one million ada each.  
 ## Communication channels
