--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
@@ -13,7 +13,7 @@ metaTitle: SC_Token and Test ADA
 
 ### How to get SC_Token?
 
-IO Global has a open-sourced faucet at https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases. 
+IO Global has an open-sourced faucet at https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases. 
 
 ## What is Test Ada?
 
