--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
@@ -1,6 +1,6 @@
 # Run a POC EVM Sidechain Network
 
-![img](https://i.imgur.com/z5RME4c.png)
+![img](https://i.imgur.com/rAnlJHO.png)
 
 ## Step 01 - Run Cardano testnet
 
@@ -11,7 +11,6 @@ Before setting up and running a sidechain (EVM sidechain), it is essential to es
 - [Getting started with stake pool operation](https://developers.cardano.org/docs/operate-a-stake-pool/)
 - [Getting started with Ogmios](https://developers.cardano.org/docs/get-started/ogmios/)
 - [Getting started with Kupo](https://cardanosolutions.github.io/kupo/)
-- [Getting started with CTL](https://github.com/Plutonomicon/cardano-transaction-lib)
 
 ## Step 02 - Deploy mainchain scripts to mainnet
 
