--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/06-transferring-tokens.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/06-transferring-tokens.mdx
@@ -21,7 +21,7 @@ Transferring `SC_Token` from a sidechain to the main chain will require interfac
 
 - Go to https://remix.ethereum.org/
 
-- Create `/contracts/bridge.abi` with the following contents: [bridge.abi](PENDING_URL)
+- Get the contents of the bridge contract solidity or ABI from the sc-evm repository [here](https://github.com/input-output-hk/sc-evm/blob/main/src/solidity-bridge/contracts/Bridge.sol).
 
 *Note: Make sure your Remix-compatible Web3 provider is configured to the EVM sidechain testnet. Eg: MetaMask.*
 
