--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
@@ -1,6 +1,6 @@
 # Run a POC EVM Sidechain Network
 
-![img](https://i.imgur.com/rAnlJHO.png)
+![img](../../images/sc-services.png)
 
 ## Step 01 - Run Cardano testnet
 
