--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/09-how-to.mdx
@@ -1,4 +1,7 @@
-# Run a POC EVM Sidechain Network
+---
+title: Run a POC EVM Sidechain Network
+metaTitle: Run a POC EVM Sidechain Network
+---
 
 ## Step 01 - Run Cardano testnet
 
@@ -21,10 +24,10 @@ For a sidechain to function efficiently, a set of scripts needs to be deployed o
 
 DB Sync is a crucial component when it comes to enabling an EVM sidechain to listen to events on the Cardano mainnet. By integrating DB Sync into your sidechain infrastructure, you can establish a reliable connection that allows your sidechain to stay synchronized with the Cardano mainnet.
 
-- [How to run a Cardano DB Sync node](https://github.com/input-output-hk/cardano-DB Sync/blob/master/doc/building-running.md)
+- [How to run a Cardano DB Sync node](https://github.com/input-output-hk/cardano-DB-Sync/blob/master/doc/building-running.md)
 
 ## Step 04 - Run EVM Sidechain validator node
 
 Sidechain validator nodes are responsible for validating transactions, proposing and validating blocks, and maintaining the consensus mechanism within a sidechain network. These nodes ensure the integrity and security of the sidechain by participating in the block production process. However, before they can contribute, they must register with the sidechain committee.
 
-- [Getting started with evm-sidechain client](https://github.com/input-output-hk/sc_evm)
+- [Getting started with evm-sidechain client](https://github.com/input-output-hk/sc-evm)
