--- a/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/06-development-guidelines/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -8,7 +8,7 @@ This page helps you navigate through the technical information, resources, and u
 
 Last updated on: June 24, 2023
 
-Current node version: [v.8.1.1](https://github.com/input-output-hk/cardano-node/releases)  
+Current node version: [v.8.1.2](https://github.com/input-output-hk/cardano-node/releases)  
 [Release notes](https://docs.cardano.org/tools/release-notes/)  
 [Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)  
 
@@ -16,7 +16,8 @@ Access the [cardano-node](https://github.com/input-output-hk/cardano-node#overvi
 ## Latest node details
 This release is mainnet ready and has significant improvements at epoch boundary. All SPOs are strongly encouraged to update.  
 
-Node 8.1.1 is a minor release of the Cardano node. It implements a fix from ouroboros-network for P2P topologies that don't contain DNS names in local roots.
+Node 8.1.2 is a minor release of the Cardano node, which updates the Plutus interpreter.
+
 ## Overview of Cardano environments
 ### Preview
 Preview is the longer-term network environment for testing release candidates and expanded test scenarios. Preview is meant for DApps, SPOs, and exchanges wishing to test mature release candidates.  
