--- a/content/14-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/14-pioneer-programs/01-plutus-pioneers.mdx
@@ -42,7 +42,7 @@ If you are interested in joining a future cohort of this program, please complet
 
 ## Will I be certified?
 
-Yes, we will be awarding certificates to those pioneers who successfully complete the entire program. Certificates will be represented as non-fungible tokens (NFTs) (on the testnet) and locked by a Plutus contract. Pioneers can demonstrate their qualification by constructing an appropriate transaction to unlock their individual token.
+Yes, we are working on certification for those pioneers who successfully complete the entire program. Certificates will be represented as non-fungible tokens (NFTs) (on the testnet) and locked by a Plutus contract. Pioneers can demonstrate their qualification by constructing an appropriate transaction to unlock their individual token.
 
 ## Yes, I'm interested!
 
