--- a/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -42,7 +42,7 @@ There are several things you should note when working with BigQuery:
 ## Getting started with BigQuery
 
 **To get started, go to the
-[IOG data analytics dataset](https://console.cloud.google.com/bigquery?project=iog-data-analytics&supportedpurview=project&ws=!1m4!1m3!3m2!1siog-data-analytics!2scardano_mainnet).**
+[Cardano mainnet dataset](https://console.cloud.google.com/bigquery?referrer=search&hl=el&orgonly=true&project=blockchain-analytics-392322&ws=!1m4!1m3!3m2!1sblockchain-analytics-392322!2scardano_mainnet).**
 
 Note that to start querying data, you need to have a Google project. In case you
 don’t have a Google project:
@@ -59,7 +59,7 @@ bigquery.jobs.create permission in project iog-data-analytics."
 You are now all set to work with the dataset:
 
 1.  Open the
-    [dataset](https://console.cloud.google.com/bigquery?project=iog-data-analytics&supportedpurview=project&ws=!1m4!1m3!3m2!1siog-data-analytics!2scardano_mainnet)
+    [dataset](https://console.cloud.google.com/bigquery?referrer=search&hl=el&orgonly=true&project=blockchain-analytics-392322&ws=!1m4!1m3!3m2!1sblockchain-analytics-392322!2scardano_mainnet)
 2.  Select the table you would like to retrieve data from
 3.  Click the ‘query’ option:
 
@@ -93,7 +93,7 @@ See more examples in
 The cost for querying data from BigQuery is paid by an individual querying it.
 BigQuery charges an amount analogous to the amount of the data being queried.
 
-Usually, the cost is \$5 per terabyte (TB) of the data queried. Find more
+Usually, the cost is $7.5 per terabyte (TB) of the data queried. Find more
 information by visiting the
 [BigQuery pricing page](https://cloud.google.com/bigquery/pricing).
 
@@ -103,14 +103,14 @@ information by visiting the
 ## Data update and validation process
 
 The data in the BigQuery ‘cardano-mainnet’ project is currently updated every two hours including the newest ‘db-sync’ blocks. 
-The [overview](https://stats.da.iogservices.io/postgres_bigquery_metrics/) of block heights
+The [overview](https://lookerstudio.google.com/reporting/97178b23-25f9-41d6-a292-262297e49269/page/6QCYD) of block heights
 in BigQuery vs. PostgreSQL is also updated every two hours. It is expected that the data in BigQuery is not at the same block height as in PostgreSQL from ‘db-sync’, however, the data should not deviate too much.
 
 ### Data validation
 
 The data of the past full epoch between ‘db-sync’ and BigQuery is validated on every epoch boundary. For this, we compute the data hashes in canonical order in both databases and compare them.
 
-This [report](https://datastudio.google.com/reporting/cddef62a-c257-48c7-b772-1b9fc4970498)
+This [report](https://lookerstudio.google.com/reporting/70d14c4f-b602-4238-9cf5-9658008cefa9/page/tEnnC)
 shows the results of data validation for all tables.
 
 ## Query table schemas
@@ -125,5 +125,4 @@ The current release includes almost all of the blockchain data from _db\_sync_ v
 In its future iterations, this dataset on BigQuery will cover even more Cardano data, and we
 will be updating this section with more details.
 
-To raise an issue or share your feedback, please reach out to
-data-analytics@iohk.io.
+To raise an issue or share your feedback, please reach out to bca@sbclab.net.
