--- a/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -8,7 +8,7 @@ This page helps you navigate through the technical information, resources, and u
 
 Last updated on: June 24, 2023
 
-Current node version: [v.8.1.2](https://github.com/input-output-hk/cardano-node/releases)  
+Current node version: [v.8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2)  
 [Release notes](https://docs.cardano.org/tools/release-notes/)  
 [Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)  
 
