--- a/content/07-operating-a-stake-pool/02-about-stake-pools.mdx
+++ b/content/07-operating-a-stake-pool/02-about-stake-pools.mdx
@@ -33,18 +33,4 @@ potential rewards, or reputation for the operator.
 _Note, that to eliminate such a case, it is beneficial for owners and operators
 to consider entering into contractual arrangements._
 
-### Setting up and operating a stake pool
-
-Stake pools are a key part of decentralized [Cardano](https://cardano.org/), supporting the mechanisms
-that ensure the long-term health and liveness of the network. By running a stake
-pool, stake pool operators enable other users to participate in the protocol and
-gain rewards without needing to continuously run an online node. Read the
-following sections to find out more about:
-
--   [Creating a stake pool](/getting-started/operating-a-stake-pool/creating-a-stake-pool)
--   [Establishing connectivity between core and relay nodes](/getting-started/operating-a-stake-pool/node-connectivity)
--   [Operational certificates and keys](/getting-started/operating-a-stake-pool/creating-keys-and-certificates)
--   [Public stake pools and metadata management](/getting-started/operating-a-stake-pool/public-stake-pools)
--   [SMASH metadata management](/getting-started/operating-a-stake-pool/SMASH)
--   [Stake pool performance](/getting-started/operating-a-stake-pool/performance)
--   [Stake pool ranking](/getting-started/operating-a-stake-pool/ranking)
+Read the following sections to find out how to set up and operate a stake pool. 
