--- a/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
+++ b/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
@@ -1,29 +1,45 @@
 ---
-title: Creating a stake pool
-metaTitle: Creating a stake pool
+title: Creating and managing a stake pool
+metaTitle: Creating and managing a stake pool
 ---
 
-First, you should [install the node from source](https://github.com/input-output-hk/cardano-node/blob/master/doc/getting-started/install.md).
+First, you should [install the node from source](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md).
 
+You can then proceed with the operational tasks for managing your stake pool.
 
-You can then proceed with the following operational tasks for managing your stake pool:
+**Video lessons** on how to create and manage a stake pool on the preview testnet: 
 
-**Set up**
+1. [The setup](https://youtu.be/6AQaPdmxnfo)
+2. [Generating stake pool keys](https://youtu.be/xydi4_pqOdo)
+3. [Registering the stake pool on-chain](https://youtu.be/9UK_EFG-nkA)
+4. [Stake pool's topology file, startup script and systemd](https://youtu.be/1CaMmsgFPnw)
+5. [Requesting delegation from the faucet and stake snapshots](https://youtu.be/t5BOFmy6IYg)
+6. [Stake pool operations part 1](https://youtu.be/NCdsk75-7NA)
 
-- [Configuration and topology files](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/1_getConfigFiles_AND_Connect.md)
-- [Configuring topology files for block-producing and relay nodes](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/0_core_relay.md)
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md)
-- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/6_node_keys.md)
-- [Registering key stake address on the blockchain](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/5_register_key.md)
-- [Creating an operational certificate with key evolving signature (KES)](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
-- [Registering a stake pool with metadata](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/8_register_stakepool.md)
-- [Starting a node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/2_start_your_nodes.md)
-- [Creating a simple transaction](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/4_simple_transaction.md)
+- Querying stake snapshot
+- Querying leadership schedule
+- Querying KES period info
+- Renewing KES keys and an operational certificate
+    
+7. [Stake pool operations part 2](https://youtu.be/2LHCWyvM4Lc)
 
-**Maintenance**
+- Changing pool parameters
+- Withdrawing rewards
+        
+8. [Stake pool operations part 3](https://www.youtube.com/watch?v=WcT2gyflJKg)
+    
+- [Updating cardano-node and cardano-cli](https://youtu.be/WcT2gyflJKg)
+- [Retiring a stake pool](https://youtu.be/x4Igwc_WaoA)
 
-- [Leadership schedule](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/9_leadership_schedule.md)
-- [Querying a stake pool snapshot](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/10_query_stakepool.md)
-- [Generating new operational certificate and keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md#issue-new-counter-and-operational-certificate)
-- [Withdrawing rewards](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/11_withdraw-rewards.md)
-- [Retiring a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/12_retire_stakepool.md)
+**Supporting [handbook](/cardano-course/handbook/create-a-stake-pool)  material:**
+
+- [The Setup](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/the-setup)
+- [Generating keys](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/generate-keys)
+- [Registering a stake pool](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/register-stake-pool)
+- [Exploring runtime system options](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/runtime-system-options)
+- [Running the nodes](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/running-the-nodes)
+- [About stake snapshots](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/stake-snapshots)
+- [Upgrading cardano-node and cardano-cli](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/upgrading-cardano-node-and-cardano-cli)
+- [Stake pool operations and maintenance](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/pool-maintainance)
+- [Retiring a stake pool](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/retiring-a-stake-pool)
+
