--- a/content/07-operating-a-stake-pool/07-SMASH.mdx
+++ b/content/07-operating-a-stake-pool/07-SMASH.mdx
@@ -103,5 +103,4 @@ managed accurately. A request is usually processed in 7 working days.
 It is important to note that delisting refers _only_ to the display of metadata
 and listing with SMASH. As a decentralized network, at no point, will stake pool
 operations themselves be affected. For more information or any clarifications,
-you can email smash@iohk.io, contact @benohanlon in Telegram, or reach out to
-@benohanlon directly on Twitter.
+you can email smash@iohk.io.
